2002-10-15  Alan Modra  <amodra@bigpond.net.au>

	* objcopy.c (copy_file): Report ambiguous bfd_object matches, and
	other object errors in preference to bfd_core errors.

2002-10-14  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* objdump.c: #include "bfdver.h".
	* version.c: Likewise.
	* Makefile.in: Regenerate.
	* config.in: Regenerate.
	* configure: Regenerate.
	* po/POTFILES.in: Regenerate.

2002-10-09  Daniel Jacobowitz  <drow@mvista.com>

	* readelf.c (display_debug_info): Ignore empty .rela.debug_info
	sections.  Allow relocations against the absolute symbol.  Don't
	use the value in compunit.cu_abbrev_offset if we found a RELA
	relocation.   

2002-10-07  Gordon Chaffee <chaffee@netvmg.com>

	* addr2line.c (slurp_symtab): Read in dynamic symbols if no
	ordinary ones are available.

2002-09-30  H.J. Lu <hjl@gnu.org>

	* readelf.c (get_machine_flags): Handle E_MIPS_MACH_4120,
	E_MIPS_MACH_5400 and E_MIPS_MACH_5500.

2002-09-17  Zack Weinberg  <zack@codesourcery.com>

	* Makefile.am (CFILES): Add cxxfilt.c.
	(cxxfilt_SOURCES): Now just cxxfilt.c $(BULIBS).
	(cxxfilt_LDADD): Delete.
	Remove all references to underscore.c.
	Regen dependencies.
	* configure.in: Define TARGET_PREPENDS_UNDERSCORE in
	config.h from $UNDERSCORE, rather than AC_SUBSTing it.
	* binutils/cxxfilt.c: Moved here from gcc/cp, minor
	adjustments to fit into binutils framework.
	* configure, config.in, Makefile.in, doc/Makefile.in: Regenerate.

2002-09-12  Roland McGrath  <roland@redhat.com>

	* readelf.c (decode_location_expression): DW_OP_calli -> DW_OP_call_ref
	Handle DW_OP_GNU_push_tls_address.

2002-09-11  Nick Clifton  <nickc@redhat.com>

	* po/tr.po: Updated Turkish translation.

2002-09-10  Nick Clifton  <nickc@redhat.com>

	* MAINTAINERS: Add Ben Elliston as a maintainer for configure and
	testsuite changes.  Add paragraphs about testsuite and config
	patches.

2002-08-29  Nick Clifton  <nickc@redhat.com>
